Fix staff menu clipping/not scrolling

--- a/html/css/global.css
+++ b/html/css/global.css
@@ -533,10 +533,10 @@ div.dropdown-menu {
   min-width: 300px;
   min-height: 100px;
   top: 28px;
-  right: 0px;
+  right: 8px;
   z-index: 500;
   padding: 4px 8px 4px 8px;
-  max-height: 100%;
+  max-height: 85%;
   overflow-y: auto;
   background-color: #999;
 }
